--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "require": {
     "php": "^7.1|^8.0",
 
-    "psr/http-message": "^1.0|^2.0",
+    "psr/http-message": "^1.0",
     "psr/http-factory": "^1.0",
     "psr/http-client": "^1.0",
 
@@ -20,7 +20,7 @@
 
     "php-http/discovery": "^1.13",
 
-    "symfony/dependency-injection": "^3.3|^4.0|^5.0|^6.0",
+    "symfony/dependency-injection": "^3.3|^4.0|^5.0",
     "doctrine/instantiator": "^1.0.3",
     "jms/serializer": "^1.6|^2.0|^3.0",
 
