--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 
     "goetas-webservices/xsd2php-runtime": "^0.2.11",
     "goetas-webservices/soap-common": "^0.2.2",
-    "goetas-webservices/soap-reader": "^0.3.3",
+    "goetas-webservices/soap-reader": "*",
     "goetas-webservices/xsd2php": "^0.4.7",
     "laminas/laminas-code": "^4.8",
     "doctrine/inflector": "^2.0"
